--- a/style.css
+++ b/style.css
@@ -14,9 +14,18 @@
 .navbar{
     position: fixed;
     width: 100%;
-    padding: 15px 0px;
-    background-color: crimson;
+    padding: 30px 0px;
+    /* background-color: crimson; */
     font-family: 'Ubuntu' , 'sans-serif';
+    transition: all 0.3s ease;
+}
+.navbar.sticky{
+    padding: 15px 0;
+    background-color: crimson;
+}
+.navbar.sticky .logo a span{
+    color: #fff;
+    transition: all 0.3s ease;
 }
 .navbar .max-width{
     display: flex;
@@ -28,6 +37,9 @@
     font-size: 35px;
     font-weight: 600;
 } 
+.navbar .logo a span{
+    color: crimson;
+}
 .navbar .menu li{
     list-style: none;
     display: inline-block;
@@ -37,4 +49,42 @@
     font-size: 18px;
     font-weight: 500;
     margin-left: 25px;
+    transition: color 0.5s ease;
+}
+.navbar.sticky .menu li a:hover{
+    color: #fff;
+}
+.navbar .menu li a:hover{
+    color: crimson;
+}
+/* Home Section Styling */
+
+.home{
+    display: flex;
+    background: url('./images/banner.jpg') no-repeat center ;
+    height: 100vh;
+    background-size: cover;
+    background-attachment: fixed;
+    color: #fff;
+    min-height: 500px;
+    font-family: 'Ubuntu' , 'sans-serif';
+}
+.home .max-width{
+    margin: auto 0 auto 40px;
+}
+.home .home-content .text-1{
+    font-size: 27px;
+}
+.home .home-content .text-2{
+    font-size: 75px;
+    font-weight: 600;
+    margin-left: -3px;
+}
+.home .home-content .text-3{
+    font-size: 40px;
+    margin: 5px 0;
+}
+.home .home-content .text-3 span{
+    color: crimson;
+    font-weight: 500;
 }
